readme fix, button nowrap text

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -30,6 +30,7 @@
     align-items: center;
     position: relative;
     z-index: 2;
+    white-space: nowrap;
 }
 
 .button_theme_primary {
